<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudapp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headwin"
        android:background="@color/head"
        android:id="@+id/head">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPatientButton"
            android:src="@drawable/ic_check_circle_white_48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/head"
            android:layout_marginRight="@dimen/spaceForm"
            android:onClick="onRegisterButton"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:src="@drawable/ic_arrow_back_white_48dp"
            android:background="@color/head"
            android:layout_alignTop="@+id/addPatientButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onBack" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingBottom="2dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/textFormField"
        android:textColor="@color/normalText"
        android:id="@+id/msgBox"
        android:layout_marginBottom="@dimen/spaceForm"
        android:visibility="gone" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/spaceForm">



        <TextView
            style="@style/textFormSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerTitle"
            android:id="@+id/textView3" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/spaceForm"
        android:paddingRight="@dimen/spaceForm">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                style="@style/textFormComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerComment"
                android:id="@+id/textcommnet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textFieldNameRegister"
                android:id="@+id/lname"
                style="@style/textFormField" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                style="@style/enterFieldFormName" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailRegister"
                android:id="@+id/lemail"
                style="@style/textFormField" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                style="@style/enterFieldForm" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailRegisterConfirm"
                android:id="@+id/lemailConfirm"
                style="@style/textFormField" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/emailConfirm"
                style="@style/enterFieldForm" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordRegister"
                android:id="@+id/lPassword"
                style="@style/textFormField" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password"
                style="@style/enterFieldForm" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordRegisterConfirm"
                android:id="@+id/lpasswordConfirm"
                style="@style/textFormField" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passwordConfirm"
                style="@style/enterFieldForm" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/back_efect">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>