<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.capetisoft.patients.BackupActivity"
    tools:showIn="@layout/activity_backup">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueMacawFeathers">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/backgroudapp"
                    android:paddingBottom="5dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_action_log"
                        android:layout_gravity="center_vertical"
                        android:background="@color/blueMacawFeathers"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anonymous"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:id="@+id/mUsername" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/backu_singout"
                        android:id="@+id/btnSingOut"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="center_vertical"
                        android:onClick="onSignOut"
                        android:textSize="8sp" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_backup"
                    android:id="@+id/textView8"
                    android:textColor="@color/backgroudapp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="22sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonCloud"
                    android:id="@+id/backupTime"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/backgroudapp"
                    android:textColor="@color/headEnd"
                    android:padding="5dp"/>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore_button"
                android:id="@+id/btnRestore"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@color/messageWaning"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:onClick="onRestoreBckup"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
